fixed ADA issue with contrast

--- a/assets/findify-variables-defaults.css
+++ b/assets/findify-variables-defaults.css
@@ -5,7 +5,7 @@
 
   /* Typography */
   --findify-text-inverse-color: #ffffff;
-  --findify-text-secondary-color: #7d7d7d;
+  --findify-text-secondary-color: #575757;
   --findify-base-font-size: 14px;
   --findify-background-color: #ffffff;
 
